Configuration and first post

--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,21 @@
 inc:
   # Blog Information
-  title:        "Jekyll Incorporated"
-  subtitle:     "Modern Jekyll based blog for companies"
+  title:        "Mathew Davies"
+  subtitle:     "Developer for DueDil"
   cover_image:  blog-cover.jpg
   logo:         logo.png
   
   # Company information
-  company:      Incorporated
-  url:          http://sendtoinc.com/
-  facebook:     sendtoinc
-  twitter:      sendtoinc
-  gplus:        '101183822199340201470'
-  about_link:   https://sendtoinc.com/about/
+  company:      DueDil
+  url:          https://duedil.com
+  facebook:     ThePixelDeveloper
+  twitter:      ColonelRosa
+  gplus:        false
+  about_link:   false
   
   # Product Information
-  product_link: http://incorporated.sendtoinc.com/
-  tagline:      "Get a modern blog for your company"
+  product_link: false
+  tagline:      false
   
   # Comments
   disqus:
@@ -41,7 +41,7 @@ inc:
   
   # Setup your fonts, colors etc at _assets/stylesheets/main.scss
 
-url:         http://incorporated.sendtoinc.com
+url:         //thepixeldeveloper.github.io/mathew-davies.co.uk/
 source:      .
 destination: ./_site
 plugins:     ./_plugins
@@ -71,7 +71,7 @@ excerpt_separator: "<!-- more -->"
 safe:        false
 host:        0.0.0.0
 port:        4000
-baseurl:     /
+baseurl:
 lsi:         false
 
 maruku:
